--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
+.pnp
+.pnp.js
 
 # Environment variables
 .env
@@ -10,6 +12,7 @@ pnpm-lock.yaml
 .env.development.local
 .env.test.local
 .env.production.local
+.env*.local
 
 # Logs
 logs
@@ -22,7 +25,13 @@ pnpm-debug.log*
 
 # OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
+Desktop.ini
 *.swp
 *.swo
 *~
@@ -31,42 +40,95 @@ Thumbs.db
 .vscode/
 .idea/
 *.iml
+*.iws
+*.ipr
+.project
+.classpath
+.settings/
+*.sublime-workspace
+*.sublime-project
 
 # Uploads (uploaded images and files)
 uploads/**
 !uploads/.gitkeep
 
-# Seed scripts (optional - remove if you want to track them)
-# seedCables.js
-# seedNetworking.js
-# seedStorage.js
-
 # Temporary files
 temp/
 tmp/
+*.tmp
 
 # Build files
 dist/
 build/
+out/
+*.tsbuildinfo
 
 # Testing
 coverage/
 .nyc_output/
 test-results/
+*.lcov
+.jest/
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
+*.db-journal
+
+# Cache
+.cache/
+.parcel-cache/
+.eslintcache
+.stylelintcache
+.npm
+.yarn-integrity
 
 # Misc
 *.pid
 *.seed
 *.pid.lock
-.DS_Store
 
 # PM2
 .pm2/
+ecosystem.config.js
 
 # Debug
 debug.log
+*.stackdump
+
+# Deployment
+.vercel
+.netlify
+.firebase
+.serverless
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# dotenv environment variable files
+.env.backup
+
+# Backup files
+*.bak
+*.backup
+*~
+
+# System files
+System Volume Information
+$RECYCLE.BIN/
